--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "aos": "^3.0.0-beta.6",
+    "dotenv": "^16.4.5",
     "next": "14.2.3",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
